feat: create order service tests for new lock attribute